# PyPion

./: .gitignore  .gitlab-ci.yml  Plotting_Classes.py  README.md  SiloHeader_data.py  argparse_command.py  list-files  plot_nestedgrid_3dslice.py  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
doc/: dev.md
examples/: plot-bowshock-grid.py  plot-bowshock-grid_2D.py  plot-wr140-grid.py
examples/NEMO_Bowshock/: nemo-bowshock-V-B-fields.py  nemo-bowshock-get-1D-data.py
pypion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pypion/: PlotData.py  Plotting_Classes.py  SiloHeader_data.py  __init__.py  derived_fields_yt.py  example_plots_yt.py  microphysics.py  pion2yt.py  silo_to_yt.py  util.py
src/pypion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/silo/: install_silo.sh
